# rust-embedded

./: Cargo.toml  build.rs  config.toml  openocd.cfg  openocd.gdb
.cargo/: config.toml
examples/: blink.rs  button.rs
src/: main.rs
